# convlogic

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml  sweep_config.yaml
configs/model/: cifar10_b.yaml  cifar10_l.yaml  cifar10_m.yaml  cifar10_s.yaml  mnist_l.yaml  mnist_m.yaml  mnist_s.yaml
dockerfiles/: base.dockerfile  train.dockerfile
notebooks/: ConvLogic_Demo.ipynb
scripts/: run_sweep.py
src/: data.py  evaluate.py  model.py  train.py
src/common/: cuda_config.cuh  cuda_utils.cuh  cuda_vec.cuh
src/convlogic/: __init__.py  convlogic_layer.py  data.py  model.py  treelogic_layer.py
src/convlogic/cuda/: convlogic.cpp  convlogic_kernel.cu  full_convlogic_kernel.cu  treelogic_kernel.cu
src/difflogic/: __init__.py  compiled_model.py  difflogic.py  functional.py  packbitstensor.py
src/difflogic/cuda/: difflogic.cpp  difflogic_kernel.cu
src/utils/: config.py  seed.py
tests/: conftest.py
tests/convlogic/: test_convlogic_autograd.py  test_convlogic_forward.py  test_full_convlogic_autograd.py  test_full_convlogic_forward.py  test_poollayer.py  test_treelogic_autograd.py  test_treelogic_forward.py
tests/difflogic/: test_difflogic_autograd.py  test_difflogic_forward.py
